@@ -425,6 +425,9 @@
         <service android:name=".services.StopPull">
         </service>
 
+        <service android:name=".services.PreCacheService">
+        </service>
+
         <service android:name=".services.MarkReadService">
         </service>
 
